# Homomorphic-Encryption

./: .gitignore  CMakeLists.txt  README.md  main.cpp
